CHANGES IN canprot 0.1.5-16 (2020-04-06)
----------------------------------------

- Remove transcriptomic datasets from 2020 compilation.

- More updates: colorectal/VHW+19, prostate/SHC+20, hypoxia/RVN+20,
  prostate/KHN+20, hypoxia/SPJ+20, 3D/EWK+19, secreted/CWG+19.

- Add datasets for liver cancer.

CHANGES IN canprot 0.1.5 (2020-02-20)
-------------------------------------

- This version was not released on CRAN. The package is archived on
  Zenodo (https://doi.org/10.5281/zenodo.3676560).

- Rename check_ID() to check_IDs() and add 'IDcol' argument. The
  function now uses a data frame for input and output.

- Remove update_IDs(). check_IDs() now maps old to new UniProt IDs.

- Remove remove_entries(). Its functionality has been replaced by
  cleanup(), which should be used after check_IDs().

- Naming consistency: rename pdat_CRC() to pdat_colorectal().

- Because of the more standardized workflow using check_IDs() and
  cleanup() (especially, detection of duplicates in cleanup() after ID
  updates in check_ID()), there are minor differences in results for
  some datasets compared to Dick (2017). The known changes are: ZYS+10
  in pdat_colorectal(), and HXS+06, BMJ+11, CBW+11, RKP+14 in pdat_hypoxia().

- Change default to basis = "rQEC" in protcomp() and get_pdat().

- Remove 'dataset' argument from cleanup() (it was used only for
  printing messages).

- Add 'probs' argument to diffplot(), giving the probability levels
  for the contour(s).

- Revert to mfun = "median" for the default in get_comptab().

- Add PS() function for retrieving phylostrata from Liebeskind et al.
  (2016) or Trigos et al. (2017). PS is available for calculation with
  get_comptab().

- Add O2AA() and basis = "biosynth" option to H2OAA(), used to obtain
  stoichiometric coefficient of O2 and H2O in amino acid biosynthetic
  reactions.

- Remove get_pdat(). It is just as easy to use e.g.
  get("pdat_colorectal")().
