@@ -183,9 +183,9 @@ pdat_secreted <- function(dataset = 2020, basis = "rQEC") {
     dat <- cleanup(dat, "Accession", up2)
     pcomp <- protcomp(dat$Accession, basis=basis)
   } else if(study=="CWG+19") {
-    # 20200405 U87‐MG glioma cell secretome
+    # 20200405 U87-MG glioma cell secretome
     dat <- read.csv(paste0(datadir, "CWG+19.csv.xz"), as.is=TRUE)
-    description <- "U87‐MG glioma cell secretome"
+    description <- "U87-MG glioma cell secretome"
     # drop proteins that are identified in both hypoxia and normoxia
     dat <- dat[!(dat$hypoxia & dat$normoxia), ]
     dat <- check_IDs(dat, "Accession", aa_file=paste0(extdatadir, "/aa/human/CWG+19_aa.csv.xz"))
