@@ -23,3 +23,5 @@ LDB+15_all,"CHO all",,294,205,-0.1208,-0.1438,-0.0231,0.0305,0.0145,-0.0161,-1.6
 LDB+15_high,"CHO high",,66,75,-0.1116,-0.1438,-0.0323,0.0153,0.0145,-8e-04,-1.6315,-1.6962,-0.0647,0.2282,0.3252,0.097,377.5,397,19.5,NA,NA,NA,NA,NA,NA
 YDZ+15,"Yarrowia lipolytica",,14,28,-0.1413,-0.1248,0.0165,0.077,0.034,-0.043,-1.6492,-1.6294,0.0197,0.412,0.358,-0.054,427.5,330,-97.5,NA,NA,NA,NA,NA,NA
 RBP+16,"Paracoccidioides lutzii",,160,141,-0.1371,-0.134,0.0031,0.0695,0.0113,-0.0582,-1.6704,-1.6333,0.0371,0.3646,0.3132,-0.0515,341,341,0,NA,NA,NA,NA,NA,NA
+KAK+17,"Lactobacillus fermentum bile salt",,106,81,-0.172,-0.1381,0.0339,0.0482,0.0385,-0.0097,-1.8333,-1.6822,0.1512,0.4699,0.3844,-0.0855,271.5,320,48.5,NA,NA,NA,NA,NA,NA
+JBG+18,"Candida albicans 1 M NaCl",,84,63,-0.1506,-0.153,-0.0023,0.0493,0.0213,-0.028,-1.8066,-1.732,0.0746,0.4167,0.4054,-0.0114,365,350,-15,NA,NA,NA,NA,NA,NA
