@@ -1657,6 +1657,16 @@
   doi       = {10.1002/pmic.201800491},
 }
 
+@Article{KAK+17,
+  author    = {Gurjeet Kaur and Syed Azmal Ali and Sudarshan Kumar and Ashok Kumar Mohanty and Pradip Behare},
+  journal   = {Journal of Proteomics},
+  title     = {{L}abel-free quantitative proteomic analysis of \emph{{L}actobacillus fermentum} {NCDC} 400 during bile salt exposure},
+  year      = {2017},
+  pages     = {36--45},
+  volume    = {167},
+  doi       = {10.1016/j.jprot.2017.08.008},
+}
+
 @Article{LJC+18,
   author    = {Taewon Lee and So Hyun Jun and Chi Won Choi and Seung Il Kim and Je Chul Lee and Ji Hyun Shin},
   journal   = {Microbial Pathogenesis},
@@ -2263,6 +2273,17 @@
   pages     = {477--488},
   volume    = {144},
   doi       = {10.1007/s11060-019-03262-4},
+}
+
+@Article{JBG+18,
+  author    = {Jacobsen, Mette D. and Beynon, Robert J. and Gethings, Lee A. and Claydon, Amy J. and Langridge, James I. and Vissers, Johannes P. C. and Brown, Alistair J. P. and Hammond, Dean E.},
+  journal   = {Scientific Reports},
+  title     = {Specificity of the osmotic stress response in \emph{{C}andida albicans} highlighted by quantitative proteomics},
+  year      = {2018},
+  number    = {1},
+  pages     = {14492},
+  volume    = {8},
+  doi       = {10.1038/s41598-018-32792-6},
 }
 
 @Article{EWK+19,
