@@ -4,7 +4,8 @@ CHANGES IN canprot 0.1.5-16 (2020-04-06)
 - Remove transcriptomic datasets from 2020 compilation.
 
 - More updates: colorectal/VHW+19, prostate/SHC+20, hypoxia/RVN+20,
-  prostate/KHN+20, hypoxia/SPJ+20, 3D/EWK+19, secreted/CWG+19.
+  prostate/KHN+20, hypoxia/SPJ+20, 3D/EWK+19, secreted/CWG+19,
+  osmotic/JBG+18, osmotic/KAK+17.
 
 - Add datasets for liver cancer.
 
